--- a/assets/css/templatemo-klassy-cafe.css
+++ b/assets/css/templatemo-klassy-cafe.css
@@ -120,12 +120,12 @@ body {
 }
 
 ::selection {
-  background: #fb5849;
+  background: black;
   color: #fff;
 }
 
 ::-moz-selection {
-  background: #fb5849;
+  background: black;
   color: #fff;
 }
 
@@ -147,7 +147,7 @@ body {
 
 .main-white-button a {
   font-size: 13px;
-  color: #fb5849;
+  color: black;
   background-color: #fff;
   padding: 12px 25px;
   display: inline-block;
@@ -326,7 +326,7 @@ banner
   right:30px;
   width: 50px;
   height: 50px;
-  background-color: #fb5849;
+  background-color: black;
   border:0 none;
   line-height: 44px;
   border-radius: 50%;
@@ -413,53 +413,6 @@ about
 ---------------------------------------------
 */
 
-#about {
-  margin-top: 20px;
-  padding: 100px 0px 0px 0px;
-  position: relative;
-  z-index: 9;
-}
-
-#about .section-heading h2 {
-  padding-right: 120px;
-}
-
-#about img {
-  width: 100%;
-  overflow: hidden;
-}
-
-#about .left-text-content p {
-  margin-bottom: 25px;
-}
-
-#about .right-content {
-  margin-left: 30px;
-}
-
-#about .right-content .thumb {
-  position: relative;
-}
-
-#about .right-content .thumb a {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 70px;
-  height: 70px;
-  display: inline-block;
-  line-height: 70px;
-  text-align: center;
-  background-color: #fb5849;
-  color: #fff;
-  border-radius: 50%;
-  transform: translate(-35px, -35px);
-  transition: all .3s;
-}
-
-#about .right-content .thumb a:hover {
-  opacity: .9;
-}
 
 
 /*
@@ -469,8 +422,7 @@ menu
 */
 
 #menu {
-  margin-top: 120px;
-  background-color: #fffafa;
+  background-color: black;
   padding: 120px 0px;
 }
 
@@ -507,8 +459,8 @@ menu
 .info {
   position: relative;
   width: 100%;
-  background-color: #fb5849;
-  border: 1px solid #fb5849;
+  background-color: black;
+  border: 1px solid white;
   transform: translateY(100%)
   translateY(120px)
   translateZ(0);
@@ -537,7 +489,7 @@ menu
   position: absolute;
   width: 70px;
   height: 70px;
-  background-color: #fb5849;
+  background-color: black;
   font-size: 20px;
   font-weight: 700;
   color: #fff;
@@ -581,7 +533,7 @@ menu
 #menu .owl-nav .owl-prev:before {
   display: inline-block;
   font-family: 'FontAwesome';
-  color: #fb5849;
+  color: white;
   font-size: 25px;
   font-weight: 700;
   content: '\f104';
@@ -613,7 +565,7 @@ menu
 #menu .owl-nav .owl-next:before {
   display: inline-block;
   font-family: 'FontAwesome';
-  color: #fb5849;
+  color: white;
   font-size: 25px;
   font-weight: 700;
   content: '\f105';
