--- a/assets/css/templatemo-klassy-cafe.css
+++ b/assets/css/templatemo-klassy-cafe.css
@@ -1110,7 +1110,7 @@ responsive
 
 #preloader {
   overflow: hidden;
-  background-color: #fb5849;
+  background-color: black;
   left: 0;
   right: 0;
   top: 0;
