--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1003,6 +1003,61 @@ offers
     margin-top: -93px;
 }
 
+.banner {
+    margin-top: 20px;
+    margin: 45px 0;
+    padding: 0px 0;
+}
+
+.banner .container {
+    max-width: 750px;
+    max-height: 200px;
+    text-align: center;
+  
+}
+
+.banner .section-header {
+    margin-bottom: 20px;
+}
+
+.banner .section-header p {
+    color: #414141;
+    background: transparent;
+}
+
+.banner .section-header p::after {
+    display: none;
+}
+
+.banner .section-header h3 {
+    color: #ffffff;
+}
+
+.banner .section-header h3 span {
+    color: #f2b416;
+    font-size: 50px;
+}
+
+.banner .banner-text p {
+    font-size: 10px;
+    color: #ffffff;
+}
+
+.banner .banner-text .btn {
+    margin-top: 15px;
+    color: #EF233C;
+    background: #ffffff;
+    box-shadow: inset 0 0 0 50px #ffffff;
+}
+
+.banner .banner-text .btn:hover {
+    color: #ffffff;
+    background: transparent;
+    box-shadow: inset 0 0 0 0 #ffffff;
+    border-color: #ffffff;
+}
+
+
 
 
 /* 
