--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -687,19 +687,20 @@ Currently Market Style
 
 }
 
-.currently-market .item .row .column-1, .column-2, .column-3{
+.currently-market .item .row .column-2{
   padding: 10px;
+  margin-top: 80px;
+  margin-left: -280px;
+
 }
 
 .currently-market .item .row .column-1 h4{
   font-size: 16px;
 }
 
-.currently-market .item .row .column-2 {
-  margin-top: 20px;
-}
 .currently-market .item .row .column-3 {
-  margin-top: 2px;
+  margin-top: 73px;
+  padding-left: 70px;
 }
 
 .currently-market .item .row .column-2 h6{
@@ -1374,13 +1375,14 @@ responsive
   }
 
   .currently-market .item .left-image {
-    width: 10%;
-    margin-left: 10px;
+    width: 50%;
+    margin-left: 50px;
   }
 
   .currently-market .item .right-content {
     margin-top: 190px;
-    margin-right: 70px;
+    margin-right: 90px;
+    margin-left: -150px;
   }
 
   .currently-market .item .right-content .size h6 {
