--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -688,6 +688,7 @@ Currently Market Style
 }
 
 .currently-market .item .row .column-2{
+  position: relative;
   padding: 10px;
   margin-top: 80px;
   margin-left: -280px;
@@ -713,43 +714,7 @@ Currently Market Style
 }
 
 
-.currently-market .item .line-dec {
-  width: 100%;
-  height: 1px;
-  background-color: rgba(255, 255, 255, 0.2);
-  margin-bottom: 25px;
-  margin-top: 30px;
-}
 
-.currently-market .item span strong {
-  font-size: 20px;
-}
-
-.currently-market .item span.bid {
-  line-height: 35px;
-}
-
-.currently-market .item span.bid em,
-.currently-market .item span.ends em {
-  font-style: normal;
-}
-
-.currently-market .item span.ends {
-  text-align: right;
-  float: right;
-  line-height: 35px;
-}
-
-.currently-market .item .text-button {
-  margin-top: 40px;
-}
-
-.currently-market .item .text-button a {
-  font-size: 15px;
-  font-weight: 700;
-  color: #7453fc;
-  border-bottom: 1px solid #7453fc;
-}
 
 /*
 ---------------------------------------------
@@ -1390,7 +1355,7 @@ responsive
   }
 
   .currently-market .item .row .column-2 {
-    margin-left: -30px;
+
   }
 
 
