--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -601,6 +601,7 @@ Currently Market Style
 */
 
 .currently-market {
+  margin-top: 30px;
   position: relative;
 }
 
@@ -1579,4 +1580,34 @@ a.tm-bg-green:hover {
 }
 
 
+/** growyhing section **/
 
+.growyhing {
+     border-top: #eaeaea solid 1px;
+     border-bottom: #eaeaea solid 1px;
+     margin-top: 80px;
+     padding-top: 40px;
+}
+
+
+
+.body_img::before {
+     position: absolute;
+     content: "";
+     width: 60px;
+     background: url(../images/border.png);
+     background-position: center;
+     background-repeat: no-repeat;
+     top: 0;
+     bottom: 0;
+     left: -40px;
+}
+
+.body_img figure {
+     margin: 0;
+     margin-bottom: 20px;
+}
+
+.body_img figure img {
+     width: 100%;
+}
